# Portfolio

./: Dockerfile  README.md  docker-compose-back.yml  docker-compose.yml  pyproject.toml  run_back.sh  run_front.sh  run_scripts.sh
backend/: main.py
backend/belote/: atout.py  game.py  player.py  team.py
backend/tennis/afterwork/: random_choice.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: config.ts
frontend/src/components/belote/: AddPoint.jsx  AddPoint.tsx  BoxTitle.jsx  NameConfiguration.tsx  TeamConfiguration.tsx
frontend/src/components/partial/: FootPage.jsx  NavBar.jsx  NavBar.tsx
frontend/src/model/: responseModels.ts
frontend/src/router/: Router.jsx  Router.tsx
frontend/src/views/: About.jsx  About.tsx  Alternance.tsx  BUT1ereannee.jsx  BUT1ereannee.tsx  BUT2emeannee.jsx  BUT2emeannee.tsx  BUT3emeannee.tsx  BUTCultureGenerale.tsx  HomePage.tsx  IUT.tsx  Tennis.jsx  Tennis.tsx  TennisAfterwork.tsx
frontend/src/views/belote/: Acceuil.tsx  Configuration.tsx  Game.tsx  Regles.tsx
